--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -20,9 +20,9 @@ a.top-jump.fa.fa-arrow-up href="#home"
 
   .row.section-row
     .large-12.columns
-      h1.page-head-hidden 5tringy Creative, Salk Lake design. Web Design, SEO, Graphic Design.
+      h1.page-head-hidden 5tringy Creative, Salk Lake web design, SEO, Graphic Design.
       h3.page-head Rise above all the rest
-      h4.subhead We focus on making you stand out in the best way possible. Don't be ashamed of your website anymore, we'll make you one so good your competition will be drooling!
+      h4.subhead We focus on making you stand out in the best way possible. Don't be ashamed of your website anymore, we'll design you one so good your competition will be drooling!
       .row.home-trifecta
         .medium-4.columns.trifecta-cols
           span.fa.fa-leaf.fresh
@@ -107,10 +107,7 @@ a.top-jump.fa.fa-arrow-up href="#home"
 footer
   .row
     .large-12.columns
-      a href="#"
-        i.fa.fa-facebook-square
-      a href="#"
-        i.fa.fa-twitter-square
-      a href="#"
-        i.fa.fa-linkedin-square
+      a.fa.fa-facebook-square href="#"
+      a.fa.fa-twitter-square href="#"
+      a.fa.fa-linkedin-square href="#"
       p Copyright &COPY; #{Time.now.year}, 5tringy Creative
