--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -3,6 +3,7 @@ html lang="en"
   head
     meta charset="utf-8" /
     meta content="width=device-width, initial-scale=1.0" name="viewport" /
+    meta description="5tringy Creative is a web design shop located in Utah. We specialize in the latest technologies, giving our clients the best resluts possible." /
     title= content_for?(:title) ? yield(:title) : "5tringy Creative, Salk Lake design | Web Design | SEO | Graphic Design"
     link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet"
 
