--- a/app/views/home/_slide.html.slim
+++ b/app/views/home/_slide.html.slim
@@ -2,41 +2,41 @@
   ul data-listname="Websites"
     li
       .slide-item
-        =image_tag("logo_5_w.svg", alt: "5tringy Creative Logo")
+        =image_tag("slide_static.svg", alt: "5tringy Creative Logo")
         span Static
     li
       .slide-item
-        =image_tag("logo_5_w.svg", alt: "5tringy Creative Logo")
+        =image_tag("slide_responsive.svg", alt: "5tringy Creative Logo")
         span Responsive
     li
       .slide-item
-        =image_tag("logo_5_w.svg", alt: "5tringy Creative Logo")
+        =image_tag("slide_seo.svg", alt: "5tringy Creative Logo")
         span SEO
   ul data-listname="Design"
     li
       .slide-item
-        =image_tag("logo_5_w.svg", alt: "5tringy Creative Logo")
+        =image_tag("slide_logos.svg", alt: "5tringy Creative Logo")
         span Logos
     li
       .slide-item
-        =image_tag("logo_5_w.svg", alt: "5tringy Creative Logo")
-        span Identity
+        =image_tag("slide_branding.svg", alt: "5tringy Creative Logo")
+        span Branding
     li
       .slide-item
-        =image_tag("logo_5_w.svg", alt: "5tringy Creative Logo")
+        =image_tag("slide_ads.svg", alt: "5tringy Creative Logo")
         span Ads
   ul data-listname="Web Apps"
     li
       .slide-item
-        =image_tag("logo_5_w.svg", alt: "5tringy Creative Logo")
+        =image_tag("slide_dynamic.svg", alt: "5tringy Creative Logo")
         span Dynamic
     li
       .slide-item
-        =image_tag("logo_5_w.svg", alt: "5tringy Creative Logo")
+        =image_tag("slide_functional.svg", alt: "5tringy Creative Logo")
         span Functional
     li
       .slide-item
-        =image_tag("logo_5_w.svg", alt: "5tringy Creative Logo")
+        =image_tag("slide_manageable.svg", alt: "5tringy Creative Logo")
         span Manageable
   .row
     .large-12.columns
