--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -27,15 +27,15 @@ a.top-jump.fa.fa-arrow-up href="#home"
         .medium-4.columns.trifecta-cols
           span.fa.fa-leaf.fresh
           h4 Fresh
-          p This is where there is a short blurb about each point. I want these to be a slider type deal when its a large screen. But then when it goes small I want each explanation under each icon. Do you think I can make that work tonight?
+          p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
         .medium-4.columns.trifecta-cols
           span.fa.fa-flash.agile
           h4 Agile
-          p This is where there is a short blurb about each point. I want these to be a slider type deal when its a large screen. But then when it goes small I want each explanation under each icon. Do you think I can make that work tonight?
+          p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
         .medium-4.columns.trifecta-cols
           span.fa.fa-shield.shield
           h4 Stable
-          p This is where there is a short blurb about each point. I want these to be a slider type deal when its a large screen. But then when it goes small I want each explanation under each icon. Do you think I can make that work tonight?
+          p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 
   .area-foot.bubs
 
@@ -58,9 +58,9 @@ a.top-jump.fa.fa-arrow-up href="#home"
   a.magellan-link name="projects"
   .row.section-row
     .large-12.columns
-      h3.page-head Our latest projects
+      h3.page-head Latest Work
       h4.subhead
-        | Here is some of my best pudding, click on one to learn more about it.
+        | Here is some of our latest and greatest, click on one to learn more.
 
   = render "grid"
 
@@ -74,18 +74,9 @@ a.top-jump.fa.fa-arrow-up href="#home"
     .large-12.columns
       h3.page-head.light Hello, my name is Cody
       h4.subhead.light 43% graphic designer, 21% web developer, 100% creative mastermind.
-    .large-12.columns
-      .row.cs-info.light
-        .medium-4.columns
-          p.text-left I am the founder, designer, and developer here at 5tringy Creative.
-        .medium-4.small-8.columns
-          =image_tag('cody.jpg', alt: "Cody Stringham", class: "cs-img")
-          h4.cs-img-caption.light.text-center
-            | me
-            span.fa.fa-arrow-up
-        .medium-4.columns
-          p.text-right Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
-
+  .row
+    .large-12.columns.text-center
+      p.light Content: design background, front-end, back-end
   .area-foot.angle
 
 
