rails 4.2 conversion complete

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -3,7 +3,7 @@ $secondary-color: #3199FF;
 $light-color: #E6EBEB;
 $dark-color: #646464;
 
-
+@import "font-awesome";
 @import 'foundation_and_overrides';
 @import 'base';
 @import 'nav';
