--- a/app/views/home/_contact_form.html.haml
+++ b/app/views/home/_contact_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for @contact_email, url: contact_path do |f|
+= simple_form_for :contact, url: contact_path do |f|
 	.large-4.columns
 		.row
 			.large-3.columns
@@ -23,7 +23,7 @@
 	.large-12.columns
 		= f.label :message, class:"left inline contact-label"
 	.large-12.columns
-		= f.input :message, label:false
+		= f.text_area :message, label: false
 
 		.row
 			.large-2.large-offset-5.medium-4.medium-offset-4.small-6.small-offset-3.columns
