--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -959,7 +959,7 @@ $header-font-color: $dark-color;
 
 // We use these to control margin and padding
 // $sub-nav-list-margin: rem-calc(-4 0 18);
-// $sub-nav-list-padding-top: rem-calc(4);
+$sub-nav-list-padding-top: 0;
 
 // We use this to control the definition
 // $sub-nav-font-family: $body-font-family;
