--- a/app/assets/stylesheets/footers.css.scss
+++ b/app/assets/stylesheets/footers.css.scss
@@ -7,27 +7,27 @@
     height: 30px;
   }
   &.geo-white {
-    background: url('footer_w.svg') center bottom repeat-x;
+    background: asset_url('footer_w.svg') center bottom repeat-x;
     background-size: cover;
   }
   &.bubs {
-    background: url('footer_bubs.svg') center bottom repeat-x;
+    background: asset_url('footer_bubs.svg') center bottom repeat-x;
     background-size: cover;
   }
   &.angle {
-    background: url('footer_angle.svg') center bottom repeat-x;
+    background: asset_url('footer_angle.svg') center bottom repeat-x;
     background-size: cover;
   }
   &.angle-bottom {
-    background: url('footer_angle_bottom.svg') center bottom repeat-x;
+    background: asset_url('footer_angle_bottom.svg') center bottom repeat-x;
     background-size: cover;
   }
   &.curve {
-    background: url('footer_curve.svg') center bottom repeat-x;
+    background: asset_url('footer_curve.svg') center bottom repeat-x;
     background-size: cover;
   }
   &.geo-dark {
-    background: url('footer_d.svg') center bottom repeat-x;
+    background: asset_url('footer_d.svg') center bottom repeat-x;
     background-size: cover;
   }
 }
