prepping projects for content

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -27,15 +27,15 @@
         .medium-4.columns.trifecta-cols
           %span.fa.fa-leaf.fresh
           %h4 Fresh
-          %p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          %p Description here.
         .medium-4.columns.trifecta-cols
           %span.fa.fa-flash.agile
           %h4 Agile
-          %p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          %p Description here.
         .medium-4.columns.trifecta-cols
           %span.fa.fa-shield.shield
           %h4 Stable
-          %p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          %p Description here.
 
   .area-foot.bubs
 
