working commit for content

--- a/app/views/home/_grid.html.haml
+++ b/app/views/home/_grid.html.haml
@@ -1,13 +1,13 @@
 .main
   %ul#grid-grid.grid-grid
     %li
-      %a{"data-description" => "Description here.", "data-largesrc" => "#{asset_path('1.jpg')}", "data-title" => "Project Example 1", :href => "#"}
-        =image_tag("1.jpg", alt: "img01")
+      %a{"data-description" => "This application was created for user based marketing of the band \"Fictionist\". This application allowed users to sign up, invite users, share content for points, and redeem points for rewards.", "data-largesrc" => "#{asset_path('fictionist-noise-grid.gif')}", "data-title" => "Fictionist Noise", :href => "http://www.fictionistnoise.com/"}
+        =image_tag("fictionist-noise.jpg", alt: "Fictionist Noise Website")
     %li
-      %a{"data-description" => "Description here.", "data-largesrc" => "#{asset_path('2.jpg')}", "data-title" => "Project Example 2", :href => "http://cargocollective.com/jaimemartinez/"}
-        =image_tag("2.jpg", alt: "img02")
+      %a{"data-description" => "Description here.", "data-largesrc" => "#{asset_path('matrix-lg.png')}", "data-title" => "Matrix 73"}
+        =image_tag("matrix-sm.png", alt: "Matrix 73 Logo")
     %li
-      %a{"data-description" => "Description here.", "data-largesrc" => "#{asset_path('3.jpg')}", "data-title" => "Project Example 3", :href => "http://cargocollective.com/jaimemartinez/"}
+      %a{"data-description" => "Description here.", "data-largesrc" => "#{asset_path('3.jpg')}", "data-title" => "Project Example 3"}
         =image_tag("3.jpg", alt: "img03")
     %li
       %a{"data-description" => "Description here.", "data-largesrc" => "#{asset_path('4.jpg')}", "data-title" => "Project Example 4", :href => "http://cargocollective.com/jaimemartinez/"}
