--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -18,10 +18,7 @@
   @media screen and (max-width: 641px) {
     font-size: 1.25em;
   }
-  i {
-    position: relative;
-    top: 11px;
+  span {
     padding: 0 10px;
-    font-size: 2em;
   }
 }
