--- a/app/assets/stylesheets/project_expander.css.scss
+++ b/app/assets/stylesheets/project_expander.css.scss
@@ -16,11 +16,12 @@
   display: inline-block;
   margin: 10px 5px 0 5px;
   vertical-align: top;
-  height: 250px;
+  height: 300px;
 }
 
 .grid-grid li a img {
-  max-width: 250px;
+  width: 300px;
+  max-width: 300px;
 }
 
 .grid-grid li > a,
@@ -125,16 +126,16 @@
 .grid-details a {
   font-size: 1rem;
   border-radius: 30px;
-  background: lighten($dark-color, 30%);
-  color: $dark-color;
-  padding: 10px 30px;
-  display: inline-block;
-  margin: 30px 0 0;
+  background: $primary-color;
+  color: #fff;
+  padding: 10px 20px;
+  display: block;
+  margin: 10px 0 0;
   outline: none;
 }
 
 .grid-details a:hover {
-  background: lighten($dark-color, 20%);
+  background: darken($primary-color, 5%);
 }
 
 .grid-loading {
