--- a/app/views/home/_grid.html.haml
+++ b/app/views/home/_grid.html.haml
@@ -1,14 +1,11 @@
 .main
   %ul#grid-grid.grid-grid
+    %li{data: {show_link: 'true'}}
+      %a{"data-description" => "This application was created for user based marketing of the band \"Fictionist\". This application allowed users to sign up, invite users, share content for points, and redeem points for rewards.<br/><br/>You can view the website at:<a href='http://www.fictionistnoise.com/' target='_blank'>fictionistnoise.com</a>", "data-largesrc" => "#{asset_path('fictionist-noise-grid.gif')}", "data-title" => "Fictionist Noise"}
+        =image_tag("fictionist-noise.jpg", alt: "Fictionist Noise")
     %li
-      %a{"data-description" => "This application was created for user based marketing of the band \"Fictionist\". This application allowed users to sign up, invite users, share content for points, and redeem points for rewards.", "data-largesrc" => "#{asset_path('fictionist-noise-grid.gif')}", "data-title" => "Fictionist Noise", :href => "http://www.fictionistnoise.com/"}
-        =image_tag("fictionist-noise.jpg", alt: "Fictionist Noise Website")
-    %li
-      %a{"data-description" => "Description here.", "data-largesrc" => "#{asset_path('matrix-lg.png')}", "data-title" => "Matrix 73"}
+      %a{"data-description" => "This logo was created for a digital markting firm. The idea was to present something clean, minimal, and evoking a technical presence.<br/><br/>This was done completely vector, and can be scaled to any size.", "data-largesrc" => "#{asset_path('matrix-lg.png')}", "data-title" => "Matrix 73"}
         =image_tag("matrix-sm.png", alt: "Matrix 73 Logo")
-    %li
-      %a{"data-description" => "Description here.", "data-largesrc" => "#{asset_path('3.jpg')}", "data-title" => "Project Example 3"}
-        =image_tag("3.jpg", alt: "img03")
-    %li
-      %a{"data-description" => "Description here.", "data-largesrc" => "#{asset_path('4.jpg')}", "data-title" => "Project Example 4", :href => "http://cargocollective.com/jaimemartinez/"}
-        =image_tag("1.jpg", alt: "img01")
+    %li{data: {show_link: 'true'}}
+      %a{"data-description" => "This application was created to be a portfolio for an interior designer. She needed the functionality to present her work in a minimalistic design, with full content editability.<br/><br/>You can view the website at:<a href='http://www.edencomfortdesign.com/' target='_blank'>edencomfortdesign.com</a>", "data-largesrc" => "#{asset_path('eden-portfolio.gif')}", "data-title" => "Eden Comfort Design"}
+        =image_tag("eden-portfolio-sm.png", alt: "img03")
