--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -80,7 +80,7 @@
     .large-9.small-12.columns
       %p.light
         I have an extensive design background, and have been fostering my development career. I have worked at companies large and small over the years, and currently spend most of my time as a Software Developer at
-        %span= link_to 'Access Development', 'http://www.accessdevelopment.com/', class: ''
+        %span= link_to 'Access Development', 'http://www.accessdevelopment.com/', target: '_blank'
         in Salt Lake City, Utah. In my free time, I could be making awesome things for you!
 
   .area-foot.angle
