starts site rework

--- a/app/assets/stylesheets/about.css.scss
+++ b/app/assets/stylesheets/about.css.scss
@@ -15,7 +15,10 @@
     p {
       margin-bottom: 60px;
       a {
-        color: $dark-color;
+        color: rgba(255,255,255,0.6);
+        &:hover {
+          color: #fff;
+        }
       }
     }
   }
