--- a/app/views/home/_slide.html.haml
+++ b/app/views/home/_slide.html.haml
@@ -25,7 +25,7 @@
       .slide-item
         =image_tag("slide_ads.svg", alt: "5tringy Creative Logo")
         %span Ads
-  %ul{"data-listname" => "Web Apps"}
+  %ul{"data-listname" => "Applications"}
     %li
       .slide-item
         =image_tag("slide_dynamic.svg", alt: "5tringy Creative Logo")
@@ -43,4 +43,4 @@
       %nav
         %a{:href => "#"} Websites
         %a{:href => "#"} Design
-        %a{:href => "#"} Web Apps
+        %a{:href => "#"} Applications
