--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -2,11 +2,30 @@
 // FOUNDATION SETTINGS
 //
 
+@import "foundation/functions";
+$body-font-color: $dark-color;
+$body-font-family: "nimbus-sans", "Helvetica", Helvetica, Arial, sans-serif;
+$header-font-family: "Yellowtail";
+$header-font-color: $dark-color;
+$h3-font-size: rem-calc(48);
+$panel-font-color: $dark-color;
+$sub-nav-list-padding-top: 0;
+$topbar-bg-color: #fff;
+$topbar-dropdown-bg: $light-color;
+$topbar-dropdown-link-color: $dark-color;
+$topbar-dropdown-toggle-color: $dark-color;
+$topbar-link-color: $dark-color;
+$topbar-link-color-hover: $dark-color;
+$topbar-link-bg-hover: white;
+$topbar-menu-link-color: $dark-color;
+$topbar-menu-icon-color: $dark-color;
+$topbar-divider-border-top: solid 1px scale-color($topbar-bg-color, $lightness: -20%);
+@import 'foundation';
+
 // This is the default html and body font-size for the base rem value.
 // $rem-base: 16px;
 
 // Allows the use of rem-calc() or lower-bound() in your settings
-@import "foundation/functions";
 
 // $experimental: true;
 
@@ -37,8 +56,6 @@
 
 // We use these to control various global styles
 // $body-bg: #fff;
-$body-font-color: $dark-color;
-$body-font-family: "nimbus-sans", "Helvetica", Helvetica, Arial, sans-serif;
 // $body-font-weight: normal;
 // $body-font-style: normal;
 
@@ -113,10 +130,8 @@ $body-font-family: "nimbus-sans", "Helvetica", Helvetica, Arial, sans-serif;
 // $include-html-type-classes: $include-html-classes;
 
 // We use these to control header font styles
-$header-font-family: "NexaSlab";
 // $header-font-weight: 300;
 // $header-font-style: normal;
-$header-font-color: $dark-color;
 // $header-line-height: 1.4;
 // $header-top-margin: .2rem;
 // $header-bottom-margin: .5rem;
@@ -125,7 +140,6 @@ $header-font-color: $dark-color;
 // We use these to control header font sizes
 // $h1-font-size: rem-calc(44);
 // $h2-font-size: rem-calc(37);
-// $h3-font-size: rem-calc(27);
 // $h4-font-size: rem-calc(23);
 // $h5-font-size: rem-calc(18);
 // $h6-font-size: 1rem;
@@ -775,7 +789,7 @@ $header-font-color: $dark-color;
 // $panel-padding: rem-calc(20);
 
 // We use these to set default font colors
- $panel-font-color: $dark-color;
+
 // $panel-font-color-alt: #fff;
 
 // $panel-header-adjust: true;
@@ -959,7 +973,6 @@ $header-font-color: $dark-color;
 
 // We use these to control margin and padding
 // $sub-nav-list-margin: rem-calc(-4 0 18);
-$sub-nav-list-padding-top: 0;
 
 // We use this to control the definition
 // $sub-nav-font-family: $body-font-family;
@@ -1123,7 +1136,6 @@ $sub-nav-list-padding-top: 0;
 // $include-html-top-bar-classes: $include-html-classes;
 
 // Background color for the top bar
-$topbar-bg-color: #fff;
 // $topbar-bg: $topbar-bg-color;
 
 // Height and margin
@@ -1135,23 +1147,17 @@ $topbar-bg-color: #fff;
 // $topbar-title-font-size: rem-calc(17);
 
 // Style the top bar dropdown elements
-$topbar-dropdown-bg: $light-color;
-$topbar-dropdown-link-color: $dark-color;
 // $topbar-dropdown-link-bg: #333;
 // $topbar-dropdown-link-weight: normal;
 // $topbar-dropdown-toggle-size: 5px;
-$topbar-dropdown-toggle-color: $dark-color;
 // $topbar-dropdown-toggle-alpha: 0.4;
 
 // Set the link colors and styles for top-level nav
-$topbar-link-color: $dark-color;
-$topbar-link-color-hover: $dark-color;
 // $topbar-link-color-active: #fff;
 // $topbar-link-color-active-hover: #fff;
 // $topbar-link-weight: normal;
 // $topbar-link-font-size: rem-calc(13);
 // $topbar-link-hover-lightness: -10%; // Darken by 10%
-$topbar-link-bg-hover: white;
 // $topbar-link-bg-active: $primary-color;
 // $topbar-link-bg-active-hover: scale-color($primary-color, $lightness: -14%);
 // $topbar-link-font-family: $body-font-family;
@@ -1168,8 +1174,6 @@ $topbar-link-bg-hover: white;
 // $topbar-menu-link-transform: uppercase;
 // $topbar-menu-link-font-size: rem-calc(13);
 // $topbar-menu-link-weight: bold;
-$topbar-menu-link-color: $dark-color;
-$topbar-menu-icon-color: $dark-color;
 // $topbar-menu-link-color-toggled: #888;
 // $topbar-menu-icon-color-toggled: #888;
 
@@ -1181,7 +1185,6 @@ $topbar-menu-icon-color: $dark-color;
 
 // Divider Styles
 // $topbar-divider-border-bottom: solid 1px  scale-color($topbar-bg-color, $lightness: 13%);
-$topbar-divider-border-top: solid 1px scale-color($topbar-bg-color, $lightness: -20%);
 
 // Sticky Class
 // $topbar-sticky-class: ".sticky";
@@ -1193,4 +1196,3 @@ $topbar-divider-border-top: solid 1px scale-color($topbar-bg-color, $lightness: 
 
 // $include-html-visibility-classes: $include-html-classes;
 
-@import 'foundation';
