--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -5,6 +5,11 @@
 
 .logo {
   margin-top: 100px;
+  #intro-logo {
+    max-width: 950px;
+    width: 100%;
+    height: 250px;
+  }
 }
 
 .home-header {
