--- a/app/assets/stylesheets/intro.css.scss
+++ b/app/assets/stylesheets/intro.css.scss
@@ -11,11 +11,50 @@
     @media screen and (max-width: 641px) {
       margin-top: 20px;
     }
+    h4 {
+      font-size: rem-calc(32);
+    }
     p {
       opacity: .75;
       margin-bottom: 60px;
       padding-top: 10px;
       border-top: 2px dotted $light-color;
+    }
+    .tri-icon {
+      background: $secondary-color;
+      border-radius: 100%;
+      display: inline-block;
+      &.leaf {
+        padding: 1.65em 1.87em;
+        #home-leaf {
+          height: 75px;
+          width: 75px;
+        }
+      }
+      &.bolt {
+        padding: 1.95em 1.91em 1.35em;
+        #home-bolt {
+          width: 125px;
+          height: 125px;
+        }
+        @media screen and (max-width: 641px) {
+          #home-bolt {
+            width: 75px;
+            height: 75px;
+          }
+          margin-top: 20px;
+        }
+      }
+      &.shield {
+        padding: 2.02em 1.8em 1.42em 2.08em;
+        #home-shield {
+          width: 75px;
+          height: 75px;
+        }
+        @media screen and (max-width: 641px) {
+          margin-top: 20px;
+        }
+      }
     }
     span {
       margin: 20px 0;
