--- a/app/assets/stylesheets/service_slide.css.scss
+++ b/app/assets/stylesheets/service_slide.css.scss
@@ -80,7 +80,8 @@
 
 .serv-slide nav a {
   display: inline-block;
-  font-family: "NexaSlab";
+  font-family: "Yellowtail";
+  font-size: rem-calc(32);
   padding: 30px 30px 30px 34px;
   position: relative;
   color: lighten($secondary-color, 30%);
@@ -316,16 +317,16 @@
       position: relative;
       bottom: 20px;
       content: attr(data-listname);
-      font-family: "NexaSlab";
+      font-family: "Yellowtail";
       color: $light-color;
       font-size: 1.5em;
       padding-top: 40px;
-      padding-right: 20px;
-      text-align: right;
+      padding-left: 20px;
+      text-align: left;
       border-bottom: 1px solid lighten($secondary-color, 15%);
     }
     span {
-      font-family: "NexaSlab";
+      font-family: "Yellowtail";
       font-size: 1.5em;
       margin-top: 0px;
       display: block;
