--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -4,9 +4,10 @@
 
 #home
   .row
-    .large-8.large-offset-2.medium-10.medium-offset-1.columns
+    .large-12.columns
       %a{:name => "home", "data-magellan-destination" => "home"}
-      =image_tag("logo.svg", alt: "5tringy Creative Logo", class: "logo")
+      .logo= draw_svg('intro-logo', 'logo')
+
     .large-12.columns
       %h3.home-header
         Design
@@ -25,15 +26,15 @@
       %h4.subhead We focus on making you stand out in the best way possible. Don't be ashamed of your website anymore, we'll design you one so good your competition will be drooling!
       .row.home-trifecta
         .medium-4.columns.trifecta-cols
-          %span.fa.fa-leaf.fresh
+          .tri-icon.leaf= draw_svg('home-leaf', 'leaf')
           %h4 Fresh
-          %p Usually developers don't much like design. It seems to "artsy" for the common techie&hellip; that is not the case here. Design and Development go hand in hand. Check out the projects below and see for yourself!
+          %p We focus on great products. We know how important design is, and how tightly design should be coupled to development. Check out some of the projects below and see for yourself.
         .medium-4.columns.trifecta-cols
-          %span.fa.fa-flash.agile
+          .tri-icon.bolt= draw_svg('home-bolt', 'bolt')
           %h4 Agile
-          %p Quick iterations. Quick applications. Everything we do is agile, we work quickly to get you ideas that work developed in software that fortune 500 companies would use.
+          %p Quick iterations. Quick applications. Everything we do is agile, we work quickly to get you ideas that fit your needs. We design and develop your projects with the best tools available. We keep you up to date in market that never slows down.
         .medium-4.columns.trifecta-cols
-          %span.fa.fa-shield.shield
+          .tri-icon.shield= draw_svg('home-shield', 'shield')
           %h4 Stable
           %p We take quality assurence seriously. No shortcuts, or glass walls. Your applications stability and security are paramount to how we measure our success.
 
