--- a/app/views/home/_slide.html.haml
+++ b/app/views/home/_slide.html.haml
@@ -2,41 +2,41 @@
   %ul{"data-listname" => "Websites"}
     %li
       .slide-item
-        =image_tag("slide_static.svg", alt: "5tringy Creative Logo")
+        .slide-icon= draw_svg('slide-static', 'slide_static')
         %span Static
     %li
       .slide-item
-        =image_tag("slide_responsive.svg", alt: "5tringy Creative Logo")
+        .slide-icon= draw_svg('slide-responsive', 'slide_responsive')
         %span Responsive
     %li
       .slide-item
-        =image_tag("slide_seo.svg", alt: "5tringy Creative Logo")
+        .slide-icon= draw_svg('slide-seo', 'slide_seo')
         %span SEO
   %ul{"data-listname" => "Design"}
     %li
       .slide-item
-        =image_tag("slide_logos.svg", alt: "5tringy Creative Logo")
+        .slide-icon=draw_svg('slide-logos', 'slide_logos')
         %span Logos
     %li
       .slide-item
-        =image_tag("slide_branding.svg", alt: "5tringy Creative Logo")
+        .slide-icon=draw_svg('slide-branding', 'slide_branding')
         %span Branding
     %li
       .slide-item
-        =image_tag("slide_ads.svg", alt: "5tringy Creative Logo")
+        .slide-icon=draw_svg('slide-ads', 'slide_ads')
         %span Ads
   %ul{"data-listname" => "Applications"}
     %li
       .slide-item
-        =image_tag("slide_dynamic.svg", alt: "5tringy Creative Logo")
+        .slide-icon=draw_svg('slide-dynamic', 'slide_dynamic')
         %span Dynamic
     %li
       .slide-item
-        =image_tag("slide_functional.svg", alt: "5tringy Creative Logo")
+        .slide-icon=draw_svg('slide-functional', 'slide_functional')
         %span Functional
     %li
       .slide-item
-        =image_tag("slide_manageable.svg", alt: "5tringy Creative Logo")
+        .slide-icon=draw_svg('slide-manageable', 'slide_manageable')
         %span Manageable
   .row
     .large-12.columns
