--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -94,7 +94,7 @@
     .large-12.columns
       %h3.page-head Ready to start talking?
       %h4.subhead Send me a message here, I'll get back to you as soon as I can
-      %i.fa.fa-comments.contact-icon
+      %i.contact-icon= draw_svg('contact-talk', 'talk')
 
   .row#contact-form-row
     = render partial: "home/contact_form"
