--- a/app/assets/stylesheets/contact.css.scss
+++ b/app/assets/stylesheets/contact.css.scss
@@ -10,12 +10,15 @@
 }
 
 .contact-icon {
-  font-size: 20em;
   color: lighten($light-color, 5%);
   position: absolute;
   top: -60px;
   right: 50px;
   z-index: 0;
+  #contact-talk {
+    max-height: 350px;
+    width: 100%;
+  }
   @media screen and (max-width: 400px) {
     right: 30px;
     font-size: 15em;
