--- a/app/assets/stylesheets/service_slide.css.scss
+++ b/app/assets/stylesheets/service_slide.css.scss
@@ -46,15 +46,22 @@
   transform: translateX(0);
 }
 
-.serv-slide ul li img {
-  display: block;
-  margin: 0 auto;
+.serv-slide ul li .slide-icon {
+  #slide-static, #slide-responsive, #slide-seo, #slide-logos, #slide-branding, #slide-ads, #slide-dynamic, #slide-functional, #slide-manageable {
+    width: 100%;
+    max-height: 250px;
+  }
 }
 
-.serv-slide ul li img {
-  max-width: 80%;
-  border: none;
-}
+// .serv-slide ul li img {
+//   display: block;
+//   margin: 0 auto;
+// }
+
+// .serv-slide ul li img {
+//   max-width: 80%;
+//   border: none;
+// }
 
 .serv-slide ul li span {
   display: inline-block;
@@ -344,11 +351,12 @@
     width: 100%;
     text-align: left;
     height: 80px;
-    img {
-      position: relative;
-      bottom: 7px;
-      width: 60px;
-      display: inline;
+    .slide-icon {
+      #slide-static, #slide-responsive, #slide-seo, #slide-logos, #slide-branding, #slide-ads, #slide-dynamic, #slide-functional, #slide-manageable {
+        float: left;
+        width: 60px;
+        display: inline;
+      }
     }
     h4 {
       display: inline;
