--- a/app/assets/stylesheets/about.css.scss
+++ b/app/assets/stylesheets/about.css.scss
@@ -1,6 +1,11 @@
 #about {
   position: relative;
   background: $primary-color;
+  padding-bottom: 200px;
+  h3, h4 {
+    position: relative;
+    z-index: 10;
+  }
   .about-content {
     margin-top: 40px;
     .cody-wrap {
@@ -21,5 +26,19 @@
         }
       }
     }
+  }
+}
+
+.lego-icon {
+  position: absolute;
+  top: -40px;
+  left: 15px;
+  z-index: 0;
+  #about-lego {
+    max-height: 350px;
+    width: 100%;
+  }
+  @media screen and (max-width: 400px) {
+    left: 30px;
   }
 }
