--- a/app/views/home/_slide.html.haml
+++ b/app/views/home/_slide.html.haml
@@ -2,41 +2,41 @@
   %ul{"data-listname" => "Websites"}
     %li
       .slide-item
-        .slide-icon= draw_svg('slide-static', 'slide_static')
+        .slide-icon= draw_svg('slide-static', 'slide_static', 100)
         %span Static
     %li
       .slide-item
-        .slide-icon= draw_svg('slide-responsive', 'slide_responsive')
+        .slide-icon= draw_svg('slide-responsive', 'slide_responsive', 100)
         %span Responsive
     %li
       .slide-item
-        .slide-icon= draw_svg('slide-seo', 'slide_seo')
+        .slide-icon= draw_svg('slide-seo', 'slide_seo', 100)
         %span SEO
   %ul{"data-listname" => "Design"}
     %li
       .slide-item
-        .slide-icon=draw_svg('slide-logos', 'slide_logos')
+        .slide-icon=draw_svg('slide-logos', 'slide_logos', 100)
         %span Logos
     %li
       .slide-item
-        .slide-icon=draw_svg('slide-branding', 'slide_branding')
+        .slide-icon=draw_svg('slide-branding', 'slide_branding', 100)
         %span Branding
     %li
       .slide-item
-        .slide-icon=draw_svg('slide-ads', 'slide_ads')
+        .slide-icon=draw_svg('slide-ads', 'slide_ads', 100)
         %span Ads
   %ul{"data-listname" => "Applications"}
     %li
       .slide-item
-        .slide-icon=draw_svg('slide-dynamic', 'slide_dynamic')
+        .slide-icon=draw_svg('slide-dynamic', 'slide_dynamic', 100)
         %span Dynamic
     %li
       .slide-item
-        .slide-icon=draw_svg('slide-functional', 'slide_functional')
+        .slide-icon=draw_svg('slide-functional', 'slide_functional', 100)
         %span Functional
     %li
       .slide-item
-        .slide-icon=draw_svg('slide-manageable', 'slide_manageable')
+        .slide-icon=draw_svg('slide-manageable', 'slide_manageable', 100)
         %span Manageable
   .row
     .large-12.columns
