--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -1,3 +1,36 @@
+#awesome-load-screen {
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: #fff;
+  z-index: 1000;
+  -webkit-transition: -webkit-transform 1s cubic-bezier(.16, .68, .43, .99);
+  -moz-transition: -moz-transform 1s cubic-bezier(.16, .68, .43, .99);
+  -o-transition: -o-transform 1s cubic-bezier(.16, .68, .43, .99);
+  transition: transform 1s cubic-bezier(.16, .68, .43, .99);
+  &.offscreen {
+    -webkit-transform: translate3d(100%,0,0);
+    -moz-transform: translate3d(100%,0,0);
+    -ms-transform: translate3d(100%,0,0);
+    -o-transform: translate3d(100%,0,0);
+    transform: translate3d(100%,0,0);
+  }
+  #awesome-load-spinner {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    color: $primary-color;
+    font-size: 2em;
+    z-index: 1100;
+    margin-top: -16px;
+    margin-left: -16px;
+  }
+}
+
+
+
 a {
   transition: background .3s ease, color .3s ease, box-shadow .3s ease, transform 1s ease;
   -webkit-transition: background .3s ease, color .3s ease, -webkit-box-shadow .3s ease, -webkit-transform 1s ease;
