--- a/app/views/home/contact.html.haml
+++ b/app/views/home/contact.html.haml
@@ -1,7 +1,7 @@
 .row.section-row
   .large-12.columns
     %h3.page-head Your message has been sent!
-    %h4.subhead Thank you for contacting 5tringy Creative, we will get back to you shortly.
+    %h4.subhead Thank you for reaching out, we will get back to you shortly.
 
 .row.section-row
   .large-2.large-offset-5.medium-4.medium-offset-4.small-6.small-offset-3.columns
