--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,4 +11,6 @@
     = csrf_meta_tags
     = javascript_include_tag "vendor/modernizr"
   %body
+    #awesome-load-screen
+      #awesome-load-spinner.fa.fa-spinner.fa-pulse
     = yield
