--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,9 +1,9 @@
 !!!
 %html{:lang => "en"}
   %head
+    %title 5tringy Creative, Salk Lake Design | Web Design | SEO | Graphic Design
     %meta{charset: "utf-8"}
     %meta{name: "viewport", content: "width=device-width, initial-scale=1.0"}
-    %title{title: '5tringy Creative, Salk Lake Design | Web Design | SEO | Graphic Design'}
     %meta{name: "description", content: '5tringy Creative is a web design shop located in Utah. We specialize in the latest technologies, giving our clients the best resluts possible.'}
 
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
